:bug: 修复渲染主线程会抢锁导致阻塞